# keeep-desktop

./: .gitignore  README.md  main.js  package-lock.json  package.json  server.js
app/: index.html  manifest.json  mob.html
app/css/: keeep.css  mobile.css
app/js/: Untitled  app.js  dialog.js  format.js  modals.js  onboarding.js  render.js  state.js
docs/: releases.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
