[package]
name = "keeep"
version = "0.1.0"
description = "Keeep budget app"
authors = ["Keeep"]
edition = "2021"

[lib]
name = "keeep_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
dirs = "5"
